--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter&family=Raleway:wght@400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:wght@400;500;700;900&display=swap');
 
 .font-raleway {
     font-family: "Raleway", sans-serif;
@@ -6,4 +6,8 @@
 
 .font-inter {
     font-family: "Inter", sans-serif;
+}
+
+.font-roboto {
+    font-family: "Roboto", sans-serif;
 }
